# ChatApp

./: pyproject.toml  requirements.txt
docs/: README.md
src/: Client.py  Management.py  Server.py
tests/: test_chatapp.py
