[tool.poetry]
name = "ChatApp"
version = "2.1.4"
description = ""
authors = ["shervinbdndev <shervin2234@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
